java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateParam4-hints.pass
Create field foo in org.netbeans.test.java.hints.CreateParam4
Create parameter foo
Create local variable foo
